Fixed thing table overflow

--- a/res/main.css
+++ b/res/main.css
@@ -3,6 +3,11 @@ html, body {
     padding: 0px;
 }
 
+.body-content {
+    display: flex;
+    justify-content: center;
+}
+
 .thing-table {
     display: flex;
     justify-content: center;
@@ -10,6 +15,7 @@ html, body {
 
 .thing-table-child {
     width: 85vw;
+    overflow: auto;
 }
 
 .float {
